[gd_scene load_steps=41 format=3 uid="uid://3qvv3k3fobkd"]

[ext_resource type="Script" path="res://scenes/Enemy/base_enemy.gd" id="1_btrce"]
[ext_resource type="Texture2D" uid="uid://bnyw82uuw3eio" path="res://resources/Graph/Characters/Enemies/1/U_Idle.png" id="2_75nn3"]
[ext_resource type="Texture2D" uid="uid://cd6f4dwj65x1s" path="res://resources/Graph/Characters/Enemies/1/D_Walk.png" id="3_cugho"]
[ext_resource type="Texture2D" uid="uid://dv6w4xefj0gdu" path="res://resources/Graph/Characters/Enemies/1/S_Walk.png" id="4_mnqoc"]
[ext_resource type="Texture2D" uid="uid://7hnnt6sm3h3b" path="res://resources/Graph/Characters/Enemies/1/S_Walk_Inv.png" id="5_o1cjj"]
[ext_resource type="Texture2D" uid="uid://k16g80817ind" path="res://resources/Graph/Characters/Enemies/1/U_Walk.png" id="6_ga3e2"]
[ext_resource type="AudioStream" uid="uid://43xyiilcf0af" path="res://resources/Audio/SFX/Enemies/damage.wav" id="7_ny2j1"]
[ext_resource type="AudioStream" uid="uid://d1ar6evlujphm" path="res://resources/Audio/SFX/Enemies/death.wav" id="8_ji85h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xt000"]
radius = 78.0577

[sub_resource type="AtlasTexture" id="AtlasTexture_m0xwx"]
atlas = ExtResource("2_75nn3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn2kv"]
atlas = ExtResource("2_75nn3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh8ua"]
atlas = ExtResource("2_75nn3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbmgb"]
atlas = ExtResource("2_75nn3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpy0j"]
atlas = ExtResource("3_cugho")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxtm2"]
atlas = ExtResource("3_cugho")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbdt7"]
atlas = ExtResource("3_cugho")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owkj4"]
atlas = ExtResource("3_cugho")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt28n"]
atlas = ExtResource("3_cugho")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50045"]
atlas = ExtResource("3_cugho")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ptj"]
atlas = ExtResource("4_mnqoc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr5ab"]
atlas = ExtResource("4_mnqoc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dv3e"]
atlas = ExtResource("4_mnqoc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlj1c"]
atlas = ExtResource("4_mnqoc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4drnd"]
atlas = ExtResource("4_mnqoc")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi3cp"]
atlas = ExtResource("4_mnqoc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prdmq"]
atlas = ExtResource("5_o1cjj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otivi"]
atlas = ExtResource("5_o1cjj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj3kh"]
atlas = ExtResource("5_o1cjj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai7km"]
atlas = ExtResource("5_o1cjj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx3ip"]
atlas = ExtResource("5_o1cjj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gotx3"]
atlas = ExtResource("5_o1cjj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twnsi"]
atlas = ExtResource("6_ga3e2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0667u"]
atlas = ExtResource("6_ga3e2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y5wg"]
atlas = ExtResource("6_ga3e2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf3ba"]
atlas = ExtResource("6_ga3e2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ixph"]
atlas = ExtResource("6_ga3e2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqi0p"]
atlas = ExtResource("6_ga3e2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7uu58"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0xwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn2kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh8ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbmgb")
}],
"loop": true,
"name": &"Enemy1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpy0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxtm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbdt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owkj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt28n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50045")
}],
"loop": true,
"name": &"Enemy1WalkDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ptj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr5ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dv3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlj1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4drnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi3cp")
}],
"loop": true,
"name": &"Enemy1WalkLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prdmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otivi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj3kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai7km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx3ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gotx3")
}],
"loop": true,
"name": &"Enemy1WalkRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_twnsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0667u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y5wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf3ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ixph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqi0p")
}],
"loop": true,
"name": &"Enemy1WalkUp",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_4evyo"]
offsets = PackedFloat32Array(0, 0.439306, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.947977, 0.947977, 0.947977, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_0ghmq"]
offsets = PackedFloat32Array(0, 0.50289, 1)
colors = PackedColorArray(0.24, 0.0048, 0.0048, 1, 0.3, 0.00599999, 0.00599999, 1, 0.56, 0, 0, 1)

[node name="BaseEnemy" type="CharacterBody2D"]
script = ExtResource("1_btrce")
distance = 100.0

[node name="Damage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
shape = SubResource("CircleShape2D_xt000")

[node name="RecieveGroup" type="Node2D" parent="."]

[node name="Recieve_melee" type="Area2D" parent="RecieveGroup"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RecieveGroup/Recieve_melee"]
shape = SubResource("CircleShape2D_xt000")

[node name="Recieve_magic" type="Area2D" parent="RecieveGroup"]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RecieveGroup/Recieve_magic"]
shape = SubResource("CircleShape2D_xt000")

[node name="Recieve_range" type="Area2D" parent="RecieveGroup"]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RecieveGroup/Recieve_range"]
shape = SubResource("CircleShape2D_xt000")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.999998, 1)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_7uu58")
animation = &"Enemy1WalkDown"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.685, 0.685)
shape = SubResource("CircleShape2D_xt000")

[node name="DamageParticles" type="CPUParticles2D" parent="."]
z_index = -5
z_as_relative = false
emitting = false
amount = 128
one_shot = true
explosiveness = 1.0
randomness = 0.28
emission_shape = 1
emission_sphere_radius = 32.68
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 36.36
initial_velocity_max = 246.5
damping_min = 370.835
damping_max = 370.835
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.0
scale_amount_max = 14.31
color = Color(1, 1, 1, 0.878431)
color_ramp = SubResource("Gradient_4evyo")
color_initial_ramp = SubResource("Gradient_0ghmq")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="DeathParticles" type="CPUParticles2D" parent="."]
z_index = -5
z_as_relative = false
emitting = false
amount = 230
lifetime = 5.0
one_shot = true
explosiveness = 1.0
randomness = 0.28
emission_shape = 1
emission_sphere_radius = 32.68
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 36.36
initial_velocity_max = 246.5
damping_min = 370.835
damping_max = 370.835
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.0
scale_amount_max = 14.31
color = Color(1, 1, 1, 0.878431)
color_ramp = SubResource("Gradient_4evyo")
color_initial_ramp = SubResource("Gradient_0ghmq")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="DamageStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ny2j1")
volume_db = 16.0
max_distance = 5000.0
max_polyphony = 10
panning_strength = 2.0
bus = &"SFX"

[node name="DeathStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ji85h")
volume_db = 16.0
max_distance = 5000.0
max_polyphony = 10
panning_strength = 2.0
bus = &"SFX"

[node name="DieTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Damage" to="." method="_on_damage_area_entered"]
[connection signal="area_entered" from="RecieveGroup/Recieve_melee" to="." method="_on_recieve_melee_area_entered"]
[connection signal="area_entered" from="RecieveGroup/Recieve_magic" to="." method="_on_recieve_magic_area_entered"]
[connection signal="area_entered" from="RecieveGroup/Recieve_range" to="." method="_on_recieve_range_area_entered"]
[connection signal="timeout" from="DieTimer" to="." method="_on_die_timer_timeout"]
